--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <style> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="https://news.ycombinator.com/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://news.ycombinator.com/news.css">
+  <title>The Hacker Classics</title>
+  <style>
+    .about {
+      padding: 10px;
+    }
   </style>
 </head>
 
@@ -22,30 +29,78 @@
     xhr.send();
   };
   
-  getJSON("stories.json", function(err, data) {
-    console.log(data);
-  })
-    
-  // var process = function(data) {
-  //   console.log(data);
-  //   document.getElementById("loader").style.display = 'none';
-  //   var str = "<ul>";
-  //   for (var i in data.hits) {
-  //     str += "<li>" + data.hits[i].title + " (" + data.hits[i].points + ")</li>";
-  //   }
-  //   str += "</ul>"
-  //   document.getElementById("results").innerHTML = str;
-  // }
-  //
-  // var script = document.createElement('script');
-  // script.src = "https://hn.algolia.com/api/v1/search?tags=story&query='(1999)'&page=10&callback=process"
-  //
-  // document.getElementsByTagName('head')[0].appendChild(script);
-</script>
+  var hostname = function(url) {
+    var a = document.createElement('a');
+    a.href = url;
+    var index = (a.hostname.indexOf(".co.") == -1 ? -2 : -3);
+    return a.hostname.split(".").slice(index).join(".");
+  }
   
-  <div id="container">
+  var ago = function(timestamp) {
+    var d = new Date(timestamp);
+    var arr = d.toDateString().split(" ").slice(1, 4);
+    return `on ${arr[0]} ${arr[1]}, ${arr[2]}`;
+  }
+  
+  getJSON("stories.json", function(err, data) {
+    var seen_titles = {};
+    document.getElementById("loader").style.display = 'none';
+    var html = `
+  <table id="hnmain" border="0" cellpadding="0" cellspacing="0" width="85%" bgcolor="#f6f6ef">
+  <tr><td bgcolor="#00dd22">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding:2px"><tr>
+      <td style="width:18px;padding-right:4px"><a href="https://news.ycombinator.com"><img src="https://news.ycombinator.com/y18.gif" width="18" height="18" style="border:1px white solid;"></a></td>
+      <td style="line-height:12pt; height:10px;"><span class="pagetop">
+        <b class="hnname"><a href="/">The Hacker Classics</a></b>
+        <a href="https://news.ycombinator.com/newest">new</a> |
+        <a href="https://news.ycombinator.com/newcomments">comments</a> |
+        <a href="https://news.ycombinator.com/show">show</a> |
+        <a href="https://news.ycombinator.com/ask">ask</a> |
+        <a href="https://news.ycombinator.com/jobs">jobs</a> |
+        <a href="https://news.ycombinator.com/submit">submit</a>
+      </span></td>
+    </tr></table>
+  </td></tr>
+  <tr style="height:10px"></tr>
+<tr><td><table border="0" cellpadding="0" cellspacing="0" class="itemlist">
+`;
+    for (var yr in data) {
+      if (data.hasOwnProperty(yr) && parseInt(yr) < 2012) {
+        for (var i in data[yr]) {
+          var story = data[yr][i];
+          if (seen_titles[story.title]) continue;
+          seen_titles[story.title] = 1;
+          var domain = hostname(story.url);
+          html += `
+<tr class='athing' id='${i}'>
+  <td align="right" valign="top" class="title"><span class="rank">§.</span></td> 
+  <td valign="top" class="votelinks"><center>&nbsp;</center></td>
+  <td class="title">
+    <a href="${story.url}" class="storylink">${story.title}</a>
+    <span class="sitebit comhead"> (<a href="https://news.ycombinator.com/from?site=${domain}"><span class="sitestr">${domain}</span></a>)</span>
+  </td>
+</tr>
+<tr><td colspan="2"></td><td class="subtext">
+  <span class="score" id="score_${i}">${story.points} points</span> by <a href="https://news.ycombinator.com/user?id=${story.author}" class="hnuser">${story.author}</a> 
+  <span class="age"><a href="https://news.ycombinator.com/item?id=${story.objectID}">${ago(story.created_at)}</a></span> <span id="unv_16413917"></span> | 
+  <a href="https://news.ycombinator.com/item?id=${story.objectID}">${story.num_comments}&nbsp;comments</a>
+</td></tr>
+<tr class="spacer" style="height:5px"></tr>
+`;
+        }
+      }
+    };
+    html += '</table></td></tr></table></td></tr>';
+    document.getElementById("placeholder").innerHTML = html;
+  })
+</script>
+
+<div class="about"><p>Hacker News is no different from most of today's web in emphasizing what's new. When you're following a bunch of feeds, it's easy to forget that the web is the greatest library in the history of the world—and that a good library doesn't just have a rack of newspapers, it has a vast collection of books and archives: the stacks.</p>
+
+<p>Here, then, are the gems that occasionally surface on news.yc when a good patron goes diving into the stacks. You can see how this page is built <a href="https://github.com/jsomers/hn-classics">on Github</a>.</p></div>
+<center>
+  <span id="placeholder"></span>
   <img src="loader.gif" id="loader">
-  <div id="results"></div>
-  </div>
+</center>
   
 </html>
