--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <div class="about"><p>Hacker News is no different from most of today's web in emphasizing what's new. When you're following a bunch of feeds, it's easy to forget that the web is the greatest library in the history of the world—and that a good library doesn't just have a rack of newspapers, it has a vast collection of books and archives: the stacks.</p>
 
-<p>Here, then, are the gems that occasionally surface on news.yc when a good patron goes diving into the stacks. You can see how this page is built <a href="https://github.com/jsomers/hn-classics">on Github</a>.</p></div>
+<p>Here, then, are the gems that occasionally surface on news.yc when a good patron goes diving into the stacks. You can see how this page is built <a href="https://github.com/jsomers/hacker-classics">on Github</a>.</p></div>
 <center>
   <span id="placeholder"></span>
   <img src="loader.gif" id="loader">
