--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     .about {
       padding: 10px;
     }
+    .about p a:visited {
+      color: #000000;
+    }
   </style>
 </head>
 
@@ -44,65 +47,4 @@
   
   getJSON("stories.json", function(err, data) {
     var seen_titles = {};
-    document.getElementById("loader").style.display = 'none';
-    var html = `
-  <table id="hnmain" border="0" cellpadding="0" cellspacing="0" width="85%" bgcolor="#f6f6ef">
-  <tr><td bgcolor="#00dd22">
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding:2px"><tr>
-      <td style="width:18px;padding-right:4px"><a href="https://news.ycombinator.com"><img src="https://news.ycombinator.com/y18.gif" width="18" height="18" style="border:1px white solid;"></a></td>
-      <td style="line-height:12pt; height:10px;"><span class="pagetop">
-        <b class="hnname"><a href="/">The Hacker Classics</a></b>
-        <a target="_blank" href="https://news.ycombinator.com/newest">new</a> |
-        <a target="_blank" href="https://news.ycombinator.com/newcomments">comments</a> |
-        <a target="_blank" href="https://news.ycombinator.com/show">show</a> |
-        <a target="_blank" href="https://news.ycombinator.com/ask">ask</a> |
-        <a target="_blank" href="https://news.ycombinator.com/jobs">jobs</a> |
-        <a target="_blank" href="https://news.ycombinator.com/submit">submit</a>
-      </span></td>
-    </tr></table>
-  </td></tr>
-  <tr style="height:10px"></tr>
-<tr><td><table border="0" cellpadding="0" cellspacing="0" class="itemlist">
-`;
-    for (var yr in data) {
-      if (data.hasOwnProperty(yr) && parseInt(yr) < 2012) {
-        for (var i in data[yr]) {
-          var story = data[yr][i];
-          if (seen_titles[story.title]) continue;
-          seen_titles[story.title] = 1;
-          var story_url = story.url || ("https://news.ycombinator.com/item?id=" + story.objectID);
-          var domain_display = story.url ? 'inline' : 'none';
-          var domain = hostname(story_url);
-          html += `
-<tr class='athing' id='${i}'>
-  <td align="right" valign="top" class="title"><span class="rank">§.</span></td> 
-  <td valign="top" class="votelinks"><center>&nbsp;</center></td>
-  <td class="title">
-    <a href="${story_url}" target="_blank" class="storylink">${story.title}</a>
-    <span class="sitebit comhead" style="display: ${domain_display}"> (<a href="https://news.ycombinator.com/from?site=${domain}" target="_blank"><span class="sitestr">${domain}</span></a>)</span>
-  </td>
-</tr>
-<tr><td colspan="2"></td><td class="subtext">
-  <span class="score" id="score_${i}">${story.points} points</span> by <a href="https://news.ycombinator.com/user?id=${story.author}" class="hnuser">${story.author}</a> 
-  <span class="age"><a href="https://news.ycombinator.com/item?id=${story.objectID}"  target="_blank">${ago(story.created_at)}</a></span> <span id="unv_16413917"></span> | 
-  <a href="https://news.ycombinator.com/item?id=${story.objectID}"  target="_blank">${story.num_comments}&nbsp;comments</a>
-</td></tr>
-<tr class="spacer" style="height:5px"></tr>
-`;
-        }
-      }
-    };
-    html += '</table></td></tr></table></td></tr>';
-    document.getElementById("placeholder").innerHTML = html;
-  })
-</script>
-
-<div class="about"><p>Hacker News is no different from most of today's web in emphasizing what's new. When you're following a bunch of feeds, it's easy to forget that the web is the greatest library in the history of the world—and that a good library doesn't just have a rack of newspapers, it has a vast collection of books and archives: the stacks.</p>
-
-<p>Here, then, are the gems that occasionally surface on news.yc when a good patron goes diving into the stacks. You can see how this page is built <a href="https://github.com/jsomers/hacker-classics">on Github</a>.</p></div>
-<center>
-  <span id="placeholder"></span>
-  <img src="loader.gif" id="loader">
-</center>
-  
-</html>
+    document.getElementById("loader").style.displa
